--- a/cards.css
+++ b/cards.css
@@ -1,8 +1,26 @@
 body {
-	background-color: red;
+	background-color: #fff;
+	font-family: 'Oswald', sans-serif;
 }
 
-#fff {
+img{
+	margin:0 33%;
 	background-color: white;
+	border-radius: 10px;
+	box-shadow: 5px 10px rgba(200,200,200, 0.6);
+	height:150px;
 	width:auto;
 }
+
+button{
+	background-color: #4CAF50;
+	border:none;
+	color: #fff;
+	padding: 15px 32px;
+	text-transform: uppercase;
+	font-size:16px;
+    text-decoration: none;
+    display: inline-block;
+	
+}
+
